fix toolbar squashing on small windows

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -28,7 +28,7 @@ body {
   align-items: stretch;
   color: grey;
   background-color: #333333;
-  height: 30px;
+  min-height: 30px;
 }
 
 .title {
